--- a/app/public/index.html
+++ b/app/public/index.html
@@ -121,6 +121,7 @@
     <!-- Custom scripts for this page-->
     <script src="js/sb-admin-datatables.min.js"></script>
     <script src="js/sb-admin-charts.min.js"></script>
+    <script src="js/script.js"></script>
   </div>
 </body>
 
