--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -23,12 +23,12 @@
       <div class="card-body">
         <form>
           <div class="form-group">
-            <label for="exampleInputName">Your Name</label>
-            <input class="form-control" id="exampleInputName" type="text" aria-describedby="nameHelp" placeholder="Enter first name">
+            <label for="name">Your Name</label>
+            <input class="form-control" id="name" type="text" aria-describedby="nameHelp" placeholder="Enter your name">
           </div>
           <div class="form-group">
-            <label for="exampleInputEmail1">Your Pofile Image Url</label>
-            <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="profile_img">Your Pofile Image Url</label>
+            <input class="form-control" id="profile_img" type="email" aria-describedby="emailHelp" placeholder="Your profile image">
           </div>
           <div class="form-group">
               <label for="chill">You like to just kick back and chill.</label>
