--- a/app/public/index.html
+++ b/app/public/index.html
@@ -36,7 +36,7 @@
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
             <a class="nav-link" href="/api/friends">
               <i class="fa fa-fw fa-database"></i>
-              <span class="nav-link-text">All Friend Data</span>
+              <span class="nav-link-text">Friends API</span>
             </a>
           </li>
       </ul>
@@ -49,18 +49,11 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         
-        <!-- <li class="nav-item">
-          <form class="form-inline my-2 my-lg-0 mr-lg-2">
-            <div class="input-group">
-              <input class="form-control" type="text" placeholder="Search for...">
-              <span class="input-group-append">
-                <button class="btn btn-primary" type="button">
-                  <i class="fa fa-search"></i>
-                </button>
-              </span>
-            </div>
-          </form>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link text-left" href="https://github.com/dimstar/friendfinder">
+            <i class="fa fa-github"></i> my github
+          </a>
+        </li>
         <!-- <li class="nav-item">
           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
             <i class="fa fa-fw fa-sign-out"></i>Logout</a>
@@ -87,7 +80,7 @@
     <footer class="sticky-footer">
       <div class="container">
         <div class="text-center">
-          <small>Copyright © Your Website 2018</small>
+          <small><a href="mailto:kyle@dimstar.io"><i class="fa fa-envelope"></i> get in touch!</a> | <a href="http://dimstar.io"><i class="fa fa-globe"></i> my website</a></small>
         </div>
       </div>
     </footer>
